--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-cvxpy~=1.2.0
+cplex~=22.1.0
+cvxpy~=1.2.1
 docplex~=2.23.222
-gurobipy~=9.5.1
-matplotlib~=3.5.1
-numpy~=1.21.5
-pandas~=1.3.5
-scikit-learn~=1.0.2
+gurobipy~=9.5.2
+matplotlib~=3.5.3
+numpy~=1.23.2
+pandas~=1.4.3
+scikit-learn~=1.1.2
 seaborn~=0.11.2
-sphinx~=4.5.0
+sphinx~=5.1.1
 sphinx-rtd-theme~=1.0.0
-tensorflow~=2.8.0
-torch~=1.11.0
-twine~=4.0.0
-wandb~=0.12.13
+tensorflow~=2.9.1
+torch~=1.12.1
+twine~=4.0.1
+wandb~=0.13.2
