--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-cplex~=22.1.0
-cvxpy~=1.2.1
-docplex~=2.23.222
-gurobipy~=9.5.2
-matplotlib~=3.5.3
-numpy~=1.23.2
-pandas~=1.4.3
-scikit-learn~=1.1.2
-seaborn~=0.11.2
-sphinx~=5.1.1
-sphinx-rtd-theme~=1.0.0
-tensorflow~=2.9.1
-torch~=1.12.1
-twine~=4.0.1
-wandb~=0.13.2
+cplex==22.1.0
+cvxpy==1.2.0
+docplex==2.23.221
+gurobipy==9.5.0
+hatch==1.9.3
+matplotlib==3.5.0
+numpy==1.24.0
+pandas==1.4.0
+pytest==7.0.0
+scikit-learn==1.1.0
+seaborn==0.11.0
+sphinx==5.1.1
+sphinx-rtd-theme==1.0.0
+tensorflow==2.9.0
+torch==1.12.0
+wandb==0.13.0
