--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,11 @@ jobs:
             matrix:
                 # * test on different operative systems
                 # * test minimal versions: python 3.10 + strict (minimal) requirements from 'requirements.txt'
-                # * test latest versions: python 3:x (latest) + latest requirements (eager) from 'pyproject.toml' (.)
-                os: ["ubuntu-20.04"]
+                # * test latest versions: python 3.11.x (latest) + latest requirements (eager) from 'pyproject.toml' (.)
+                os: ["windows-2022", "macos-13", "ubuntu-20.04"]
                 versions: [
-                  ["3.7.1", "-r requirements.txt"],
                   ["3.8.0", "-r requirements.txt"],
-                  ["3.9.0", "-r requirements.txt"],
-                  ["3.10.0", "-r requirements.txt"],
-                  ["3.x", "--upgrade-strategy eager .[full]"]
+                  ["3.11.x", "--upgrade-strategy eager .[full]"]
                 ]
         runs-on: ${{ matrix.os }}
         steps:
