--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "hatchling.build"
 [project]
 name = 'moving-targets'
 version = '0.4.0'
-requires-python = '>=3.8'
+requires-python = '>=3.8, <3.13'
 dependencies = [
     'matplotlib>=3.5',
     'numpy>=1.24',
