--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = 'moving-targets'
-version = '0.4.0'
-requires-python = '>=3.8, <3.13'
+version = '0.4.1'
+requires-python = '>=3.8'
 dependencies = [
     'matplotlib>=3.5',
     'numpy>=1.24',
