--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
-# test using "pytest"
-# build using "hatch build"
-# publish using "hatch publish"
+# test using 'pytest'
+# build using 'hatch build'
+# publish using 'hatch publish'
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ['hatchling']
+build-backend = 'hatchling.build'
 
 [project]
 name = 'moving-targets'
-version = '0.4.1'
+version = '0.4.2'
 requires-python = '>=3.8'
 dependencies = [
     'matplotlib>=3.5',
@@ -17,7 +17,7 @@ dependencies = [
     'scikit-learn>=1.1'
 ]
 description = 'Moving Targets: a framework for constrained machine learning'
-readme = { file = "README.md", content-type = "text/markdown" }
+readme = { file = 'README.md', content-type = 'text/markdown' }
 authors = [
     { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' },
     { name = 'University of Bologna - DISI' }
@@ -25,7 +25,13 @@ authors = [
 maintainers = [
     { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' }
 ]
-license = { file = "LICENSE" }
+license = 'MIT'
+classifiers = [
+    'Development Status :: 4 - Beta',
+    'License :: OSI Approved :: MIT License',
+    'Programming Language :: Python',
+    'Operating System :: OS Independent'
+]
 
 [project.optional-dependencies]
 cvxpy = [
@@ -57,7 +63,7 @@ full = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["moving_targets"]
+packages = ['moving_targets']
 
 [project.urls]
-Repository = "https://github.com/moving-targets/moving-targets/"
+Repository = 'https://github.com/moving-targets/moving-targets/'
